<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363760">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/grassy_background"
        android:scaleType="fitXY"
        android:src="@drawable/grass_tile"
        android:tileModeX="repeat"
        android:tileModeY="repeat" />

    <ImageView
        android:id="@+id/example_enemy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/enemy_run_animation"
        android:layout_marginTop="-255dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/archer_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/archer_idle_animation"
        android:visibility="gone" />


    <FrameLayout
        android:id="@+id/diagonalPaths"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pathpoint5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="545dp"
            android:layout_marginTop="95dp"
            android:contentDescription="@string/path"
            android:rotation="45"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/pathpoint6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="545dp"
            android:layout_marginTop="255dp"
            android:contentDescription="@string/path"
            android:rotation="-45"
            android:src="@drawable/pathtile" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/path3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/path3point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path3point1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path3point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path3point3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/path1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/path1point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path1point1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path1point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path1point3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/path2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:rotation="180"
        android:rotationY="180">

        <ImageView
            android:id="@+id/path2point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path2point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path2point3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

        <ImageView
            android:id="@+id/path2point4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/path"
            android:src="@drawable/pathtile" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bushes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

        <ImageView
            android:id="@+id/bush9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="570dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="620dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="460dp"
            android:layout_marginTop="105dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="760dp"
            android:layout_marginTop="135dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="800dp"
            android:layout_marginTop="255dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="660dp"
            android:layout_marginTop="305dp"
            android:src="@drawable/_8" />

        <ImageView
            android:id="@+id/bush15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="430dp"
            android:layout_marginTop="235dp"
            android:src="@drawable/_8" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/towerSelects4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

        <ImageView
            android:id="@+id/path4tower1"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="360dp"
            android:layout_weight="1"
            android:background="@drawable/ui_select_animation" />

        <ImageView
            android:id="@+id/path4tower2"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="360dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path4tower3"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="360dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path4tower4"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="360dp"
            android:layout_marginTop="360dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/towerSelects3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

        <ImageView
            android:id="@+id/path3tower1"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="245dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path3tower2"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="245dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path3tower3"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="245dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path3tower4"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="360dp"
            android:layout_marginTop="245dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/towerSelects2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

        <ImageView
            android:id="@+id/path2tower1"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path2tower2"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path2tower3"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path2tower4"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="360dp"
            android:layout_marginTop="125dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/towerSelects1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false">

        <ImageView
            android:id="@+id/path1tower1"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path1tower2"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path1tower3"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />

        <ImageView
            android:id="@+id/path1tower4"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="360dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:src="@drawable/ui_flat_select_01a1" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/baseFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="550dp">

        <ImageView
            android:id="@+id/base_ground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ground_for_castle"
            app:srcCompat="@drawable/base_base" />

        <ImageView
            android:id="@+id/castle"
            android:layout_width="195dp"
            android:layout_height="126dp"
            android:contentDescription="@string/blue_castle"
            app:srcCompat="@drawable/castle_blue" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/hpFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="-10dp">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="139dp"
            android:layout_height="130dp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/ui_banner"
            android:src="@drawable/banner_connection_right" />

        <TextView
            android:id="@+id/hptext"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/hptext"
            android:fontFamily="@font/aldrich"
            android:text="HP: 100"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="PauseButton"
            android:src="@android:drawable/ic_media_pause" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/waveFrame"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginTop="310dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/banner2"
            android:layout_width="139dp"
            android:layout_height="130dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="-10dp"
            android:contentDescription="@string/ui_banner"
            android:src="@drawable/banner_connection_right" />

        <TextView
            android:id="@+id/waveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/hptext"
            android:fontFamily="@font/aldrich"
            android:text="Wave 1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/meatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/coins_text"
            android:fontFamily="@font/aldrich"
            android:text="0"
            android:textColor="#AB7A58"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/coinsicon"
            android:layout_width="62dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/m_idle__noshadow_" />

    </FrameLayout>

</RelativeLayout>
